crates/tun-engine-macros/tests/compile_fail/unit_struct.rs
use tun_engine_macros::freeze;

#[freeze]
pub struct Bad;

fn main() {}
