crates/tun-engine-macros/tests/compile_fail/unit_struct.stderr
error: #[freeze] requires a struct with named fields; unit structs are not supported
 --> tests/compile_fail/unit_struct.rs:3:1
  |
3 | #[freeze]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `freeze` (in Nightly builds, run with -Z macro-backtrace for more info)
